tests/A2/reject/arrayReject.ul
void main(){
    int[2] x;
    int[3] y;
    x = y;
}